# selfie

./: a.py  p.py  x.py
selfie-backend/: .env.example  .gitignore  Cargo.toml  README.md
selfie-backend/.github/workflows/: ci.yml
selfie-backend/docker/: docker-compose.yml
selfie-backend/gateway/: .gitignore  Cargo.toml  build.rs
selfie-backend/gateway/proto/: auth.proto  chat.proto  common.proto  media.proto  post.proto  user.proto
selfie-backend/gateway/src/: config.rs  error.rs  main.rs
selfie-backend/gateway/src/middleware/: mod.rs
selfie-backend/gateway/src/proxy/: mod.rs
selfie-backend/gateway/src/services/: auth.rs  chat.rs  media.rs  mod.rs  post.rs  user.rs
selfie-backend/helm/: Chart.yaml  values.yaml
selfie-backend/helm/templates/: deployment.yaml
selfie-backend/infrastructure/terraform/: main.tf  variables.tf
selfie-backend/monitoring/prometheus/: prometheus.yml
selfie-backend/scripts/: migrate.rs
selfie-backend/security/: cargo-deny.toml
selfie-backend/services/services/admin-service/: Cargo.toml
selfie-backend/services/services/ads-service/: Cargo.toml
selfie-backend/services/services/analytics-service/: Cargo.toml
selfie-backend/services/services/auth-service/: Cargo.toml
selfie-backend/services/services/auth-service/src/: error.rs  main.rs
selfie-backend/services/services/auth-service/src/api/: models.rs
selfie-backend/services/services/cdn-edge-service/: Cargo.toml
selfie-backend/services/services/chat-service/: Cargo.toml  Dockerfile
selfie-backend/services/services/feed-service/: Cargo.toml
selfie-backend/services/services/feed-service/src/: main.rs
selfie-backend/services/services/media-service/: Cargo.toml
selfie-backend/services/services/moderation-service/: Cargo.toml
selfie-backend/services/services/notification-service/: Cargo.toml
selfie-backend/services/services/payments-service/: Cargo.toml
selfie-backend/services/services/post-service/: Cargo.toml
selfie-backend/services/services/recommendation-service/: Cargo.toml
selfie-backend/services/services/search-service/: Cargo.toml
selfie-backend/services/services/social-graph-service/: Cargo.toml
selfie-backend/services/services/stories-service/: Cargo.toml
selfie-backend/services/services/user-service/: Cargo.toml
selfie-backend/shared/shared/auth-utils/: Cargo.toml
selfie-backend/shared/shared/db-models/: Cargo.toml
selfie-backend/shared/shared/events/: Cargo.toml
selfie-backend/shared/shared/ml-models/: Cargo.toml
selfie-backend/shared/shared/proto/: Cargo.toml  build.rs
selfie-backend/shared/shared/utils/: Cargo.toml
selfie-backend/testing/: README.md
selfie-kmp/: .gitignore  README.md  build.gradle.kts  (+2 more)
(+76 files in other folders)
