[workspace]
members = [
    "shared/"auth-utils", "db-models", "proto", "utils", "events", "ml-models"",
    "services/*"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tonic = { version = "0.12", features = ["tls"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
