[package]
name = "selfie-gateway"
version = "0.1.0"
edition = "2025"
description = "gRPC Gateway for Selfie microservices"
authors = ["Selfie Team"]

[dependencies]
tonic = { version = "0.11", features = ["tls", "transport"] }
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
hyper = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
config = "0.14"
futures = "0.3"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"